--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "build/index.js",
-    "dev": "nodemon",
-    "postinstall": "tsc",
-    "watch-node": "nodemon dist/index.js",
-    "watch-ts": "tsc -w",
-    "deploy": "git add . && git commit -m Heroku && git push heroku master"
+    "start": "src/index.ts",
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
