--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/node-schedule": "^1.3.2",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
-    "@types/request": "^2.48.8",
+    "@types/sharp": "^0.30.0",
     "@types/underscore": "^1.11.4",
     "@types/uuid": "^8.3.4",
     "eslint": "^8.6.0",
@@ -51,10 +51,12 @@
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
     "express-validator": "^6.14.0",
+    "fetch": "^1.1.0",
     "fs": "0.0.1-security",
     "fs-extra": "^10.0.0",
     "html-pdf": "^3.0.1",
     "http-status-codes": "^2.2.0",
+    "https": "^1.0.0",
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
@@ -62,16 +64,16 @@
     "moment": "^2.29.1",
     "mongoose": "^6.2.2",
     "node-cron": "^3.0.0",
-    "node-fetch": "^3.2.0",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
     "pdfkit": "^0.13.0",
     "request": "^2.88.2",
     "sendgrid": "^5.2.3",
-    "sharp": "^0.30.1",
+    "sharp": "^0.30.3",
     "sib-api-v3-sdk": "^8.2.1",
     "streamifier": "^0.1.1",
     "ts-node-dev": "^1.1.8",
